src/test/deca/context/invalid/created/SansObjet/ReadFloatToInt.deca
// Description:
//    test de readInt avec une conversion int -> float
// Resultats:
//    ReadFloatToInt.deca:7:12: Error: Illegal RValue type, got float, expected int

{   
    int x = readFloat();
    println(x);
}